<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:padding="8dp"
        android:text="@string/gaode_map"
        android:gravity="center"
        android:id="@+id/gaode_map_text_view"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/item_selector"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:padding="8dp"
        android:text="@string/baidu_map"
        android:gravity="center"
        android:id="@+id/baidu_map_text_view"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:padding="8dp"
        android:text="@string/tencent_map"
        android:gravity="center"
        android:id="@+id/tencent_map_text_view"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>


</LinearLayout>