<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:showDividers="middle"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/input_city_info"
        android:textSize="21sp"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/new_city_edit"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        tools:text="长沙" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="28dp">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginRight="30dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/cancel"
            android:padding="4dp"
            android:textSize="22sp"
            android:background="@drawable/button_selector"
            android:id="@+id/cancel_button"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="30dp"
            android:textSize="22sp"
            android:padding="4dp"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:text="@string/sure"
            android:background="@drawable/button_selector"
            android:id="@+id/sure_button"/>


    </LinearLayout>
</LinearLayout>